--- a/app/siibit/pom.xml
+++ b/app/siibit/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com</groupId>
+	<artifactId>siibit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Sistem-Informasi-Iuran-BEM</name>
+	<name>siibit</name>
 	<description>Sistem Informasi Iuran BEM IT Del</description>
 
 	<parent>
